test/sema/typeck/impl/extension-bind-type-param-twice-err1.dora
class Foo[T]
impl[T] Foo[(T, T)] {
    fn bar() {}
}
fn f(x: Foo[(Int32, Float32)]) {
    x.bar();
}

//====================
// error: no method with name `bar` in type `Foo[(Int32, Float32)]`.
// --> extension-bind-type-param-twice-err1.dora:6:5
//  | }
//  | fn f(x: Foo[(Int32, Float32)]) {
//  |     x.bar();
//        ~~~~~~~
//  | }
//  | 
// 1 error found.
